# configster

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  ChangeLog  LICENSE  README.md  config_test.conf
.github/workflows/: rust.yml
src/: lib.rs
tests/: test_general.rs
