[package]
name = "configster"
version = "0.1.1"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
edition = "2018"
license = "MIT"
description = "Library for parsing configuration files"
homepage = "https://github.com/theimpossibleastronaut/configster"
readme = "README.md"
keywords = ["config", "parser", "library", "settings"]
categories = ["configuration", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
