[package]
name = "configster"
version = "0.1.1"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "James Sherratt"]
edition = "2018"
license = "MIT"
description = "Rust library for parsing configuration files"
homepage = "https://github.com/theimpossibleastronaut/configster"
repository = "https://github.com/theimpossibleastronaut/configster"
readme = "README.md"

keywords = ["config", "parser", "library", "settings"]
categories = ["config", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
